Event functionality added

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
     <style>
 
     </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.6.1/fullcalendar.min.css">
 </head>
 
 <body>
